WebKit/chromium/public/WebInputEvent.h
@@ -130,6 +130,8 @@ public:
         NumLockOn        = 1 << 10,
     };
 
+    static const int InputModifiers = ShiftKey | ControlKey | AltKey | MetaKey;
+
     unsigned size;   // The size of this structure, for serialization.
     Type type;
     int modifiers;
